# fog05

./: .gitignore  .gitmodules  .travis.yml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.rst  Cargo.toml  INSTALL.md  Introduction.md  Jenkinsfile  LICENSE.md  MANIFEST.in  Makefile  NOTICE.md  README.md  TODO.md  build-cross.sh  build-image.sh  build.sh  configure  fos_install.sh  install_cli.sh  install_fos_lxd.sh  setup.py  setup_api.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflow/: rust.yml
.github/workflows/: rust.yml
agent/: Cargo.toml
agent/etc/: agent.yaml
agent/src/: agent.rs  main.rs
benches/zrpc/: plots.r  run-test.sh
docker/: Dockerfile  Jenkinsfile  Jenkinsfile.amd64  Jenkinsfile.arm64  Jenkinsfile.armhf  Jenkinsfile.end
docker/amd64/: Dockerfile
docker/arm64/: Dockerfile
docker/armhf/: Dockerfile
docker/etc/: sources.list
docs/: Makefile
docs/source/: conf.py  fog05.rst  index.rst
dummy-hypervisor/: Cargo.toml
dummy-hypervisor/src/: main.rs
dummy-network/: Cargo.toml
dummy-network/src/: main.rs
etc/: agent.ini  agent.json  auto_start.sh  cyclonedds.xml  fos_agent.service  fos_agent.target  screen_start.sh  screen_stop.sh  vimconn_fog05.py  vimconn_fos.py  yaks.service  yaks.target
etc/lldp/: build.sh  config.sh  run.sh
etc/systemd/: enable.sh  start.sh  stop.sh
examples/im/: fdu.json  kvm_fdu.json  lxd_atomic_entity.json  lxd_entity.json  lxd_fdu.json  vnet.json  vnet_dhcp.json
f0rce/: README.md  f0rce-agent  fog05vim.ini  orchestrator.ini
f0rce/base/: setup.py
f0rce/components/: fog05vim.py  orchestrator.py
fog05/: DLogger.py  PluginLoader.py  Schemas.py  __init__.py  api.py  fimapiv2.py  fosagent.py  mvar.py  store.py  web_api.py  yaks_connector.py
fog05-agent/: Cargo.toml
fog05-agent/etc/: agent.yaml
fog05-agent/resources/: fos-agent.service  fos-zenoh.service  get-zip.sh
fog05-agent/resources/debian/: postinst  postrm
fog05-agent/resources/rpm/: template.hbs
fog05-agent/src/: agent.rs  main.rs
fog05-fosctl/: Cargo.toml
fog05-fosctl/examples/: entity-tb3-teleop.yaml  entity-two-ping.yaml  entity.json  fdu-native-dzd-arm.yaml  fdu-native-dzd.yaml  fdu-native-zcam.yaml  fdu-native-zenoh.yaml  fdu-ros2-pub.yaml  fdu-ros2-sub.yaml  fdu-ros2-tb3.yaml  fdu-ros2-teleop.yaml  fdu.yaml
fog05-fosctl/src/: fim.rs  main.rs  types.rs
fog05-macros/: Cargo.toml
fog05-macros/examples/: zservice.rs  zworking.rs
fog05-macros/src/: lib.rs
fog05-rest/: Cargo.toml  requests.postman_collection.json
fog05-rest/etc/: rest.yaml
fog05-rest/resources/: fos-rest.service
fog05-rest/src/: main.rs
fog05-sdk/: Cargo.toml
fog05-sdk/examples/: agent-os.rs  agent-plugin.rs  dummy-hypervisor.rs  dummy-network.rs
fog05-sdk/src/: agent.rs  api.rs  fresult.rs  lib.rs  plugins.rs  types.rs
fog05-sdk/src/im/: data.rs  entity.rs  fdu.rs  mod.rs  node.rs  types.rs
fog05-sdk/src/services/: mod.rs
fog05-sdk/src/zconnector/: local.rs  mod.rs  serializers.rs
fog05-zservice/: Cargo.toml
fog05-zservice-macros/: Cargo.toml
fog05-zservice-macros/examples/: zservice.rs  zworking.rs
fog05-zservice-macros/src/: lib.rs
fog05-zservice/src/: lib.rs  types.rs  zchannel.rs
fog05/interfaces/: Agent.py  Constants.py  Entity.py  EntityInstance.py  FDU.py  MonitoringPlugin.py  NetworkPlugin.py  OSPlugin.py  (+8 more)
fosctl/: Cargo.toml
fosctl/examples/: entity_mix.json  fdu-native.yaml
fosctl/src/: fim.rs  force.rs  main.rs  types.rs
linux-network/: Cargo.toml
linux-network/etc/: config.yaml  dnsmasq.conf
linux-network/src/: lib.rs  main.rs  networking.rs  types.rs
native-hypervisor/: Cargo.toml
native-hypervisor/etc/: config.yaml
native-hypervisor/src/: lib.rs  main.rs  native.rs  types.rs
sdk/fog05-sdk-rust/: Cargo.toml  Makefile
sdk/fog05-sdk-rust/src/: lib.rs  main.rs
sdk/fog05-sdk-rust/src/im/: data.proto  fdu.rs  mod.rs  types.rs
src/agent/: Makefile  fos-agent.opam
src/agent/fos-agent/: dune  fos_agent.ml
src/api/ocaml/faemapi/fos-faem-api/: dune  fos_faem_api.ml  fos_faem_api.mli
src/api/ocaml/feoapi/: Makefile  fos-feo-api.opam
src/api/ocaml/feoapi/fos-feo-api/: dune  fos_feo_api.ml  fos_feo_api.mli
src/api/ocaml/fimapi/fos-fim-api/: dune  fos_fim_api.ml  fos_fim_api.mli
src/im/ocaml/: Makefile  fos-im.opam
src/im/ocaml/fos-im/: abs_json.ml  agent_types.atd  atomic_entity.atd  base_atomic_entity.atd  base_entity.atd  base_fdu.atd  base_network.atd  dune  fdu.atd  fos_errors.ml  fos_im.ml  fos_records_types.atd  fos_types.atd  im.atd  infra_atomic_entity.atd  infra_entity.atd  infra_fdu.atd  infra_network.atd  mec.atd  mec_interfaces.atd  nfv.atd  router.atd  user_atomic_entity.atd  user_entity.atd  user_fdu.atd  user_network.atd
src/mec/api/ocaml/dns/: Makefile  fos-dns.opam
src/mec/api/ocaml/dns/lib/: dns_types.atd  dune
src/mec/api/ocaml/mm5/: Makefile  fos-mm5.opam
src/mec/api/ocaml/mm5/lib/: Mm5.ml  Mm5.mli  dune
src/mec/orchestrator/meao/: Mm1.ml  dune  me_core.ml  meao.ml  yconnector.ml
src/mec/platform/: Makefile  me_platform.opam
src/mec/platform/etc/: 10-lxc.yaml  mec_platform.service  nginx
src/mec/platform/me_platform/: Mm5.ml  Mp1.ml  Mp1.mli  dune  me_core.ml  me_platform.ml  yaks_connector.ml
src/ocaml/src/fos/fos-core/: agent_types.atd  dune  fos_core.ml  store.mli  types.atd  yaks_connector.ml
src/utils/fosctl/: Cargo.toml  Makefile
src/utils/fosctl/examples/: entity.json  entity_k8s.json  entity_robotic.json
src/utils/fosctl/src/: main.rs  types.rs
src/utils/ocaml/cat/fos-cat/: dune  fos-cat.opam  fos_cat.ml
ykon/: README.md  setup.py
znrpc-macros/: Cargo.toml
znrpc-macros/examples/: expanded.rs  znservice.rs
znrpc-macros/src/: lib.rs  receiver.rs
zrpc/: Cargo.toml
zrpc-macros/: Cargo.toml
zrpc-macros/examples/: get.rs  put.rs  zrpc_call.rs  zrpc_state.rs  zservice.rs  zworking.rs
zrpc-macros/src/: lib.rs
zrpc-perf/: Cargo.toml  build.rs  plots.r  run-test.sh
zrpc-perf/proto/: bench.proto
zrpc-perf/src/: lib.rs
zrpc/src/: lib.rs  serialize.rs  types.rs  zchannel.rs  znchannel.rs  zrpcresult.rs
(+449 files in other folders)
