[package]
name = "fog05-agent"
version = "0.3.0-alpha1"
repository = "https://github.com/eclipse-fog05/fog05"
homepage = "http://fog05.io"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
description = "fog05: The End-to-End Compute, Storage and Networking Virtualisation solution."
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.8.0", features = ["attributes"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
async-trait = "0.1.36"
futures = "0.3.5"
thiserror = "1.0"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_yaml = "0.8.13"
serde_json = "1.0.55"
serde-aux = "0.6.1"
bincode = "1.3.1"
derive_more = "0.99.10"
semver = { version = "0.11.0", features = ["serde"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.12.3"
url = "2.1.1"
mac_address = {version =  "1.1.1", features = ["serde"]}
zrpc = {path = "../zrpc"}
zrpc-macros = {path = "../zrpc-macros"}
znrpc-macros = {path = "../znrpc-macros"}
fog05-sdk = {path = "../fog05-sdk"}
sysinfo = "0.15.3"
psutil = "3.2.0"
machine-uid = "0.2.0"
async-ctrlc ={version = "1.2.0", features = ["stream"]}
hostname = "0.3.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
pnet = { version = "0.26.0", features = ["serde"]}
pnet_datalink = { version = "0.26.0"}
ipnetwork = "0.17.0"
clap = "2.33"
structopt = "0.3.13"
rand = "0.7.3"
log = "0.4"
env_logger = "0.7.1"
git-version = "0.3.4"


[package.metadata.deb]
maintainer = "ADLINK fog05 team <fog05@adlink-labs.tech>"
copyright = "2020, ADLINK Technology Inc"
extended-description = "Eclipse fog05 Agent"
depends = "$auto"
license-file = ["../LICENSE.md", "0"]
maintainer-scripts = "resources/debian/"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/fog05-agent", "/usr/bin/", "755"],
    # assets
    ["etc/*", "/etc/fos", "644"],
    ["etc/*", "/var/fos", "644"],
    ["resources/fos-agent.service","/lib/systemd/system/fos-agent.service","644"]
]
conf-files = ["/etc/fos/agent.yaml"]

[package.metadata.deb.systemd-units]
unit-scripts = "resources/"
unit-name = "fos-agent.service"