[package]
name = "fog05-sdk"
version = "0.3.0"
repository = "https://github.com/eclipse-fog05/fog05"
homepage = "http://fog05.io"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
description = "fog05: The End-to-End Compute, Storage and Networking Virtualisation solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

schemafy = "0.5"

zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }

async-trait = "0.1.36"
futures = "0.3.5"
hex = "0.4.2"
# for errors
thiserror = "1.0"
# for serialization
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_yaml = "0.8.13"
serde_json = "1.0.55"
serde-aux = "0.6.1"
bincode = "1.3.1"
derive_more = "0.99.10"
semver = { version = "0.11.0", features = ["serde"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.12.3"
url = "2.1.1"
mac_address = {version =  "1.1.1", features = ["serde"]}
zrpc = {path = "../zrpc"}
zrpc-macros = {path = "../zrpc-macros"}

# logging
log = "0.4"
env_logger = "0.7.1"
prettytable-rs = "^0.8"
pnet = { version = "0.26.0", features = ["serde"]}
#ipnetwork = "0.17.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }

[dependencies.async-std]
version = "~1.6.5"
features = ["unstable","attributes"]

[[example]]
name = "agent-os"

[[example]]
name = "agent-plugin"
