[package]
name = "fog05-sdk"
version = "0.3.0-alpha1"
repository = "https://github.com/eclipse-fog05/fog05"
homepage = "http://fog05.io"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
description = "fog05: The End-to-End Compute, Storage and Networking Virtualisation solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.8.0", features = ["attributes"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
zenoh-protocol = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
uhlc = "0.2"
async-trait = "0.1.36"
futures = "0.3.5"
thiserror = "1.0"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
bincode = "1.3.1"
derive_more = "0.99.10"
semver = { version = "0.11.0", features = ["serde"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.12.3"
url = "2.1.1"
mac_address = {version =  "1.1.1", features = ["serde"]}
zrpc = {path = "../zrpc"}
#zrpc-macros = {path = "../zrpc-macros"}
znrpc-macros = {path = "../znrpc-macros"}
log = "0.4"
pnet = { version = "0.26.0", features = ["serde"]}
reqwest = { version = "0.10", features = ["blocking", "json"] }
rand = "0.7.3"
ipnetwork = "0.17.0"



[dev-dependencies]
env_logger = "0.7.1"
mac_address = {version =  "1.1.1", features = ["serde"]}
sysinfo = "0.15.3"
psutil = "3.2.0"
machine-uid = "0.2.0"
async-ctrlc ={version = "1.2.0", features = ["stream"]}
hostname = "0.3.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rand = "0.7.3"
clap = "2.33"
structopt = "0.3.13"
serde_json =  "1.0.55"

[[example]]
name = "agent-os"

[[example]]
name = "agent-plugin"

[[example]]
name = "dummy-network"

[[example]]
name = "dummy-hypervisor"
