[package]
name = "fog05-sdk"
version = "0.3.0-alpha1"
repository = "https://github.com/eclipse-fog05/fog05"
homepage = "http://fog05.io"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
description = "fog05: The End-to-End Compute, Storage and Networking Virtualisation solution."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.9.0", features = ["attributes"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "branch_0.5.0-beta.9"}
zenoh-util = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "branch_0.5.0-beta.9" }
zrpc = { git = "https://github.com/atolab/zenoh-rpc.git", branch = "old-api" }
znrpc-macros = { git = "https://github.com/atolab/zenoh-rpc.git", branch = "old-api" }


uhlc = "0.3.1"
async-trait = "0.1.36"
pin-project-lite = "0.2.4"
futures = "0.3.5"
thiserror = "1.0"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
derive_more = "0.99.10"
semver = { version = "1.0.4", features = ["serde"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.13.0"
url = "2.1.1"
mac_address = {version =  "1.1.1", features = ["serde"]}
log = "0.4"
pnet = { version = "0.28", features = ["serde"]}
reqwest = { version = "0.11.0", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8.3"
ipnetwork = "0.18"
machine-uid = "0.2.0"
bincode = { version = "1.3.1", optional = true}
serde_cbor = {version = "0.11.1", optional = true}
serde_json = { version = "1.0.55", optional = true}



[dev-dependencies]
env_logger = "0.9.0"
mac_address = {version =  "1.1.1", features = ["serde"]}
sysinfo = "0.20.3"
machine-uid = "0.2.0"
async-ctrlc ={version = "1.2.0", features = ["stream"]}
hostname = "0.3.1"
reqwest = { version = "0.11.0", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8.3"
clap = "2.33"
structopt = "0.3.13"
serde_json =  "1.0.55"

[[example]]
name = "agent-os"

[[example]]
name = "agent-plugin"

[[example]]
name = "dummy-network"

[[example]]
name = "dummy-hypervisor"


[features]
data_bincode = ["bincode"]
data_json = ["serde_json"]
data_cbor = ["serde_cbor"]

debug = ["data_json"]
default = ["data_cbor"]
