[package]
name = "linux-network"
version = "0.3.0"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

schemafy = "0.5"

zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
async-trait = "0.1.36"
futures = "0.3.5"
hex = "0.4.2"
# for errors
thiserror = "1.0"

# for serialization
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_yaml = "0.8.13"
serde_json = "1.0.55"
serde-aux = "0.6.1"
bincode = "1.3.1"

rtnetlink = { git = "https://github.com/little-dude/netlink", branch = "master" }
netlink-packet-route = { git = "https://github.com/little-dude/netlink", branch = "master" }

#rtnetlink = "0.5.0"
tokio = { version = "0.2.6", features = ["macros", "rt-core"] }

derive_more = "0.99.10"
semver = { version = "0.11.0", features = ["serde"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.12.3"
url = "2.1.1"
mac_address = {version =  "1.1.1", features = ["serde"]}
zrpc = {path = "../zrpc"}
zrpc-macros = {path = "../zrpc-macros"}
fog05-sdk = {path = "../fog05-sdk"}

sysinfo = "0.15.3"
psutil = "3.2.0"
#heim = {version = "0.1.0-beta.3", features = ["full"]}
machine-uid = "0.2.0"
async-ctrlc ={version = "1.2.0", features = ["stream"]}
hostname = "0.3.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rand = "0.7.3"

clap = "2.33"
structopt = "0.3.13"

# logging
log = "0.4"
env_logger = "0.7.1"

[dependencies.async-std]
version = "~1.6.5"
features = ["unstable","attributes"]
