[package]
name = "linux-network"
version = "0.3.0"
repository = "https://github.com/eclipse-fog05/fog05"
homepage = "http://fog05.io"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
description = "Eclipse fog05 Linux Networking Plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
async-trait = "0.1.36"
futures = "0.3.5"
thiserror = "1.0"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_json = { version = "1.0.55"}
serde_yaml = "0.8.13"
bincode = "1.3.1"
rtnetlink = { git = "https://github.com/gabrik/netlink", branch = "feature-ns-add-remove" }
netlink-packet-route = { git = "https://github.com/gabrik/netlink", branch = "feature-ns-add-remove" }
tokio = { version = "0.2.6", features = ["macros", "rt-core"] }
derive_more = "0.99.10"
semver = { version = "0.11.0", features = ["serde"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.12.3"
url = "2.1.1"
mac_address = {version =  "1.1.1", features = ["serde"]}
zrpc = {path = "../zrpc"}
zrpc-macros = {path = "../zrpc-macros"}
fog05-sdk = {path = "../fog05-sdk"}
async-ctrlc ={version = "1.2.0", features = ["stream"]}
reqwest = { version = "0.10", features = ["blocking", "json"] }
rand = "0.7.3"
nix = "0.19.0"
clap = "2.33"
structopt = "0.3.13"
log = "0.4"
env_logger = "0.7.1"
git-version = "0.3.4"
tera = "1.5.0"
nftnl = "0.6.0"
ipnetwork = "0.17.0"
mnl = "0.2"
signal-hook = "0.2.1"
signal-hook-async-std = "0.1.0"

[dependencies.async-std]
version = "~1.6.5"
features = ["unstable","attributes"]

[[bin]]
name = "linux-networking"
path = "bin/linux-networking.rs"
test = false
bench = false


[[bin]]
name = "ns-manager"
path = "bin/ns-manager.rs"
test = false
bench = false


[package.metadata.deb]
maintainer = "ADLINK fog05 team <fog05@adlink-labs.tech>"
copyright = "2020, ADLINK Technology Inc"
extended-description = "Eclipse fog05 Linux Networking Plugin"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/linux-networking", "usr/bin/", "755"],
    ["target/release/ns-manager", "usr/bin/", "755"],
    # assets
    ["etc/*", "etc/fos/linux-network", "644"],
    ["etc/*", "var/fos/linux-network", "644"],
]