[package]
name = "native-hypervisor"
version = "0.3.0"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.8.0", features = ["attributes"] }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
async-trait = "0.1.36"
futures = "0.3.5"
thiserror = "1.0"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_json = "1.0.55"
serde_yaml = "0.8.13"
semver = { version = "0.11.0", features = ["serde"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.12.3"
url = "2.1.1"
zrpc = {path = "../zrpc"}
zrpc-macros = {path = "../zrpc-macros"}
fog05-sdk = {path = "../fog05-sdk"}
async-ctrlc ={version = "1.2.0", features = ["stream"]}
clap = "2.33"
structopt = "0.3.13"
log = "0.4"
env_logger = "0.7.1"
git-version = "0.3.4"
nix = {version = "0.19.0"}
signal-hook = "0.2.1"
signal-hook-async-std = "0.1.0"
caps = {version = "0.5.0", optional = true}

[features]
isolation = ["caps"]
default = ["isolation"]

[[bin]]
name = "native-hypervisor"
path = "bin/native-hypervisor.rs"
test = false
bench = false

[[bin]]
name = "native-isolate"
path = "bin/native-isolate.rs"
test = false
bench = false


[package.metadata.deb]
maintainer = "ADLINK fog05 team <fog05@adlink-labs.tech>"
copyright = "2020, ADLINK Technology Inc"
extended-description = "Eclipse fog05 Linux Binaries Plugin"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/native-hypervisor", "usr/bin/", "755"],
    ["target/release/native-isolate", "usr/bin/", "755"],
    # assets
    ["etc/*", "etc/fos/native-hypervisor", "644"],
    ["etc/*", "var/fos/native-hypervisor", "644"],
]