[package]
name = "zrpc"
version = "0.3.0"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.12.3"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_yaml = "0.8.13"
serde_json = "1.0.55"
serde-aux = "0.6.1"
bincode = "1.3.1"
derive_more = "0.99.10"

log = "0.4"

[dependencies.async-std]
version = "~1.6.5"
features = ["unstable","attributes"]