[package]
name = "zrpc"
version = "0.3.0"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.8.0", features = ["attributes"] }
futures = "0.3.5"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.12.3"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
#async-std = { version = "=1.8.0", features = ["unstable"] }
bincode = { version = "1.3.1", optional = true}
serde_yaml = {version = "0.8.13", optional = true}
serde_json = { version = "1.0.55", optional = true}

[features]
resp_bincode = ["bincode"]
send_bincode = ["bincode"]

send_json = ["serde_json"]
resp_json = ["serde_json"]

state_bincode = ["bincode"]
state_json = ["serde_json"]
state_yaml = ["serde_yaml"]

default = ["resp_bincode","send_json","state_bincode"]





