[package]
name = "zrpc"
version = "0.3.0-alpha1"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.9.0", features = ["attributes"] }
futures = "0.3.5"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "cf124d6c4d393e65662d1e1caf567b66af7150d5" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.13.0"
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
bincode = { version = "1.3.1", optional = true}
serde_yaml = {version = "0.8.13", optional = true}
serde_cbor = {version = "0.11.1", optional = true}
serde_json = { version = "1.0.55", optional = true}

[features]
resp_bincode = ["bincode"]
send_bincode = ["bincode"]

send_json = ["serde_json"]
resp_json = ["serde_json"]

resp_cbor = ["serde_cbor"]
send_cbor = ["serde_cbor"]

state_bincode = ["bincode"]
state_json = ["serde_json"]
state_cbor = ["serde_cbor"]

router_json = ["serde_json"]

default = ["resp_cbor","send_cbor","state_cbor","router_json"]





