[package]
name = "fos"
version = "0.3.0"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

schemafy = "0.5"

zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "rust-master" }
async-trait = "0.1.36"
futures = "0.3.5"
hex = "0.4.2"
# for errors
thiserror = "1.0"
# for serialization
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_yaml = "0.8.13"
serde_json = "1.0.55"
protobuf = "2.16.2"
bincode = "1.3.1"

[dependencies.async-std]
version = "~1.6.0"
features = ["unstable", "attributes"]

