opam-version: "1.2"
version:"0.1"
maintainer: "gabriele.baldoni@adlinktech.com"
license: "ELP 2"
authors:      "Gabriele Baldoni"
homepage:     "https://github.com/eclipse/fog05"
bug-reports:  "https://github.com/eclipse/fog05/issues/"
dev-repo:     "https://github.com/eclipse/fog05.git"

build: [
 [make "atd"]
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "dune"
  "cmdliner"
  "re"
  "yojson"
  "logs"
  "atdgen"
  "lwt"
  "lwt_ppx"
  "apero-core"
  "apero-net"
  "yaks-ocaml"
  "fos-core"
  "fos-fim-api"
  "fos-faem-api"
]


synopsis : "Eclipse fog05 Agent"
description: """
Eclipse fog05 Agent is the running component of Eclipse fog05"""