opam-version: "1.2"
version:"0.1"
maintainer: "gabriele.baldoni@adlinktech.com"
license: "ELP 2"
authors:      "Gabriele Baldoni"
homepage:     "https://github.com/eclipse/fog05"
bug-reports:  "https://github.com/eclipse/fog05/issues/"
dev-repo:     "https://github.com/eclipse/fog05.git"

build: [
 [make "atd"]
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "dune"
  "atdgen"
  "yojson"
  "apero-core"
]



synopsis : "Eclipse fog05 IM"
description: """
Eclipse fog05 IM is a collection of OCaml libraries and types used by
Eclipse fog05 components"""