[package]
name = "fosctl"
version = "0.2.2-alpha1"
authors = ["gabrik <gabriele.baldoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
clap = "2.33"
exitfailure = "0.5.1"
failure = "0.1.8"
prettytable-rs = "^0.8"
reqwest = { version = "0.10", features = ["blocking", "json"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
base64 = "0.12.3"
derive_more = "0.99.10"
semver = { version = "0.11.0", features = ["serde"]}


#serialization
serde_derive = "1.0.55"
serde = { version = "1.0.55", features = ["derive"] }
serde_yaml = "0.8.13"
serde_json = "1.0.55"
serde-aux = "0.6.1"
