opam-version: "1.2"
version:"0.1"
maintainer: "gabriele.baldoni@adlinktech.com"
license: "ELP 2"
authors:      "Gabriele Baldoni"
homepage:     "https://github.com/eclipse/fog05"
bug-reports:  "https://github.com/eclipse/fog05/issues/"
dev-repo:     "https://github.com/eclipse/fog05.git"

build: [
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "dune"
  "fos-im"
  "fos-core"
  "apero-core"
]


synopsis : "Eclipse fog05 FEO API"
description: """
Eclipse fog05 FEO API is a collection of OCaml libraries used to interact
with Eclipse fog05 FEO"""