opam-version: "1.2"
version:"0.1"
maintainer: "gabriele.baldoni@adlinktech.com"
license: "ELP 2"
authors:      "Gabriele Baldoni"
homepage:     "https://github.com/eclipse/fog05"
bug-reports:  "https://github.com/eclipse/fog05/issues/"
dev-repo:     "https://github.com/eclipse/fog05.git"

build: [
 [make "atd"]
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "dune"
  "logs"
  "lwt"
  "lwt_ppx"
  "logs-syslog"
  "apero-core"
  "httpaf"
  "httpaf-lwt-unix"
  "faraday"
]
